--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "dotenv": "^17.2.2",
+    "googleapis": "^160.0.0",
     "mongoose": "^8.17.1",
     "next": "15.4.6",
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.1.0",
     "sooner": "^1.1.4"
   },
   "devDependencies": {
